fixed nav spacing and sizing

--- a/word-scramble/src/styles/_base.scss
+++ b/word-scramble/src/styles/_base.scss
@@ -38,6 +38,10 @@ body {
   margin: 0 auto;
 }
 
+/* ~~~~~~~~~~~~~~~~ */
+/* body */
+/* ~~~~~~~~~~~~~~~~ */
+
 body {
   width: 80%;
   min-width: 500px;
@@ -60,9 +64,8 @@ nav {
 nav li {
   display: flex;
   align-items: center;
-  // box-sizing: content-box;
   width: 106px;
-  height: 80px;
+  height: 86px;
   margin: 10px;
   border: 3px solid rgb(255, 246, 255);
   border-radius: 5px;
