--- a/word-scramble/src/styles/_instructions.scss
+++ b/word-scramble/src/styles/_instructions.scss
@@ -1,6 +1,6 @@
 .how-to-play-container {
   margin-bottom: 100px;
-  margin-left: 46px;
+  margin-left: 40px;
 
   p, li {
     font-size: 16px;
@@ -21,7 +21,6 @@
     margin-left: 50px;
     line-height: 24px;
     font-size: 1.2em;
-    
   }
     
   h2 {
@@ -64,6 +63,5 @@
   #bottom {
     height: 100px;
   }
-  
 }
 
